[gd_scene load_steps=2 format=3 uid="uid://b1380ioiemr6n"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_t28md"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_t28md")

[node name="ViewProgressButton" type="Button" parent="."]
offset_left = 577.0
offset_top = 224.0
offset_right = 794.0
offset_bottom = 339.0
text = "View Progress"

[node name="BackToMapButton" type="Button" parent="."]
offset_left = 312.0
offset_top = 224.0
offset_right = 545.0
offset_bottom = 339.0
text = "Back To Map"

[node name="BackToMainMenuButton" type="Button" parent="."]
offset_left = 576.0
offset_top = 389.0
offset_right = 808.0
offset_bottom = 504.0
text = "Back To Main Menu"

[node name="CustomizeCharacterButton" type="Button" parent="."]
offset_left = 316.0
offset_top = 390.0
offset_right = 547.0
offset_bottom = 505.0
text = "Customize Character"

[node name="Label" type="Label" parent="."]
offset_left = 424.0
offset_top = 140.0
offset_right = 698.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 28
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ViewProgressButton" to="." method="_on_view_progress_button_pressed"]
[connection signal="pressed" from="BackToMapButton" to="." method="_on_back_to_map_button_pressed"]
[connection signal="pressed" from="BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
[connection signal="pressed" from="CustomizeCharacterButton" to="." method="_on_customize_character_button_pressed"]
